# learn_backend_rust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml
.circleci/: config.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
