[package]
name = "learn_backend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "learn_backend_rust"

[dependencies]
actix-web = "4.2"
reqwest = "0.11"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
config = "0.13"
chrono = "0.4"
uuid = { version = "1.1", features = ["v4"] }
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
